package theory.structural.facade.withoutFacade;

public class BookMyshow {

    public void findMovieTickets(){
        System.out.println("Finding movie tickets from BookMyShow");
    }
}
