package theory.structural.facade.withoutFacade;

public class GoIbibo {

    public void getTickets(){
        System.out.println("Getting Tickets fromm GoIbibo");
    }
}
