package theory.structural.facade.withoutFacade;

public class MakeMyTrip {

    public void getTickets(){
        System.out.println("Getting Tickets fromm MakeMyTrip");
    }
}
