@startuml

title __WITHOUTFACADE's Class Diagram__\n

  namespace theory.structural.facade.withoutFacade {
    class theory.structural.facade.withoutFacade.BookMyshow {
        + findMovieTickets()
    }
  }
  

  namespace theory.structural.facade.withoutFacade {
    class theory.structural.facade.withoutFacade.Booking {
        + Booking()
        + findFlightTickets()
        + findMovieTickets()
    }
  }
  

  namespace theory.structural.facade.withoutFacade {
    class theory.structural.facade.withoutFacade.GoIbibo {
        + getTickets()
    }
  }
  

  namespace theory.structural.facade.withoutFacade {
    class theory.structural.facade.withoutFacade.Main {
        {static} + main()
    }
  }
  

  namespace theory.structural.facade.withoutFacade {
    class theory.structural.facade.withoutFacade.MakeMyTrip {
        + getTickets()
    }
  }
  

  theory.structural.facade.withoutFacade.Booking o-- theory.structural.facade.withoutFacade.BookMyshow : bookMyshow
  theory.structural.facade.withoutFacade.Booking o-- theory.structural.facade.withoutFacade.GoIbibo : goIbibo
  theory.structural.facade.withoutFacade.Booking o-- theory.structural.facade.withoutFacade.MakeMyTrip : makeMyTrip


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
